主页面框架搭建基本完成

--- a/client/app.json
+++ b/client/app.json
@@ -19,7 +19,7 @@
     "list": [
       {
         "pagePath": "pages/logs/logs",
-        "text": "周边",
+        "text": "首页",
         "iconPath": "image/list.png",
         "selectedIconPath": "image/listing.png"
       },
