ome页UI改版第一版完成

--- a/client/app.json
+++ b/client/app.json
@@ -15,7 +15,7 @@
   "tabBar": {
     "backgroundColor": "#ffffff",
     "color": "#999999",
-    "selectedColor": "#e83e00",
+    "selectedColor": "#576b95",
     "list": [
       {
         "pagePath": "pages/home/home",
