更改登录接口, 添加关于页面

--- a/client/app.json
+++ b/client/app.json
@@ -2,6 +2,7 @@
   "pages":[
     "pages/home/home",
     "pages/my/my",
+    "pages/about/about",
     "pages/index/index",
     "pages/addCgi/addCgi"
   ],
