--- a/project.config.json
+++ b/project.config.json
@@ -4,9 +4,14 @@
 	"miniprogramRoot": "./client",
 	"qcloudRoot": "./server",
 	"setting": {
+		"urlCheck": true,
+		"es6": true,
+		"postcss": true,
+		"minified": true,
 		"newFeature": true
 	},
 	"appid": "wxad356562bb7867dd",
 	"projectname": "%E7%82%B9%E9%A4%90%E5%B9%B3%E5%8F%B0",
+	"libVersion": "2.0.9",
 	"condition": {}
 }
