--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,10 @@
         "koa-log4": "^2.1.0",
         "koa-router": "^7.0.1",
         "lodash": "^4.17.4",
+        "mime": "^2.3.1",
         "mkdir-p": "0.0.7",
         "mysql": "^2.14.1",
+        "mz": "^2.7.0",
         "pify": "^2.3.0",
         "wafer-node-sdk": "^1.1.1"
     },
