--- a/project.config.json
+++ b/project.config.json
@@ -1,17 +1,18 @@
 {
-	"client": "./client",
-	"svr": "./server",
-	"miniprogramRoot": "./client",
-	"qcloudRoot": "./server",
+	"client": "client/",
+	"svr": "server/",
+	"miniprogramRoot": "client/",
+	"qcloudRoot": "server/",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true
 	},
+  "cloudfunctionRoot": "./cloud/function/",
 	"appid": "wxad356562bb7867dd",
 	"projectname": "%E7%82%B9%E9%A4%90%E5%B9%B3%E5%8F%B0",
-	"libVersion": "2.0.9",
+	"libVersion": "2.6.2",
 	"condition": {}
 }
