--- a/project.config.json
+++ b/project.config.json
@@ -1,8 +1,8 @@
 {
-	"client": "client/",
-	"svr": "server/",
-	"miniprogramRoot": "client/",
-	"qcloudRoot": "server/",
+	"description": "项目配置文件",
+	"packOptions": {
+		"ignore": []
+	},
 	"setting": {
 		"urlCheck": false,
 		"es6": true,
@@ -10,9 +10,34 @@
 		"minified": true,
 		"newFeature": true
 	},
-  "cloudfunctionRoot": "./cloud/function/",
+	"compileType": "miniprogram",
+	"libVersion": "2.0.4",
 	"appid": "wxad356562bb7867dd",
 	"projectname": "%E7%82%B9%E9%A4%90%E5%B9%B3%E5%8F%B0",
-	"libVersion": "2.6.2",
-	"condition": {}
+	"miniprogramRoot": "new/",
+	"debugOptions": {
+		"hidedInDevtools": []
+	},
+	"scripts": {},
+	"condition": {
+		"search": {
+			"current": -1,
+			"list": []
+		},
+		"conversation": {
+			"current": -1,
+			"list": []
+		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
+		"game": {
+			"list": []
+		},
+		"miniprogram": {
+			"current": -1,
+			"list": []
+		}
+	}
 }
